--- a/css/style.css
+++ b/css/style.css
@@ -594,8 +594,8 @@ a[href*='tel'], a[href*='mailto'] {
 		font-size: 18px;
 	}
 }
-@media (min-width: 1700px)
-.container {
+@media (min-width: 1200px)
+.collaboration_container {
     max-width: 1700px;
 }
 @media (min-width: 1200px) {
