--- a/css/style.css
+++ b/css/style.css
@@ -5047,6 +5047,7 @@ html [class*='section-'].section-bottom-0 {
 @media (min-width: 992px) {
 	.main-section {
 		padding: 220px 0 50px 0;
+		background-repeat: no-repeat;
 	}
 }
 
