--- a/css/style.css
+++ b/css/style.css
@@ -8860,3 +8860,25 @@ margin-bottom:1em;
 .blog-wrap h5 {
 	color: steelblue; 
 }
+.blog-quote, .blog-quote {
+  color: #bda36c;
+  text-align: center;
+  font-size:1.2rem;
+  position: relative;
+  padding: 25px 0;
+}
+.blog-quote:before, .blog-quote:after {
+  position: absolute;
+  content: '';
+  right: 0;
+  left: 0;
+  height: 1px;
+  /* background-image: -webkit-linear-gradient(left, #fff, #d9d9d9 50%, #fff); */
+  background-image: -o-linear-gradient(left, #fff, #d9d9d9 50%, #fff);
+  background-image: linear-gradient(to right, #fff, #d9d9d9 50%, #fff);
+  /* background-repeat: no-repeat; */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FFFFFFFF', endColorstr='#FFFFFFFF', GradientType=1);
+}
+.blog-quote auth {
+	font-size: 1rem;
+}
