--- a/css/style.css
+++ b/css/style.css
@@ -8889,3 +8889,7 @@ margin-bottom:1em;
 .blog-quote auth {
 	font-size: 1rem;
 }
+.blog-page-time {
+	margin-top: 0 !important;
+	margin-left: 1em;
+}
