--- a/css/style.css
+++ b/css/style.css
@@ -361,10 +361,13 @@ a, a:focus, a:active, a:hover {
 	text-decoration: none;
 }
 
-a, a:focus, a:active {
+a, a:focus, a:active{
 	color: #aab2b9;
 }
-
+a:hover {
+	color: rgb(85, 26, 139);
+	font-weight: bold;
+}
 
 
 a[href*='tel'], a[href*='mailto'] {
