--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ body {
 	font-size: 14px;
 	line-height: 2.14286;
 	font-weight: 400;
-	color: #888888;
+	color: black;
 	background-color: #ffffff;
 	-webkit-text-size-adjust: none;
 	-webkit-font-smoothing: subpixel-antialiased;
